--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,7 @@
     "polymer-ui-base-css": "Polymer/polymer-ui-base#~0.2.0",
     "polymer-ui-toolbar": "Polymer/polymer-ui-toolbar#~0.2.0",
     "platform": "Polymer/platform#~0.2.0",
-    "prismjs": "*"
+    "prism": "*"
   },
   "resolutions": {
     "polymer": "master",
